package com.ryannoah.auction.domain;

public enum AuctionStatus {
    SCHEDULED,
    ACTIVE,
    CLOSED,
    SOLD
}
