package com.ryannoah.auction.domain;

public enum Condition {
    NEW,
    LIKE_NEW,
    GOOD,
    FAIR,
    POOR,
    EXTENSIVE_USE
}
