@startuml
' DDD-PlantUML style domain model for the Auction Microservices System.
' Stereotypes identify bounded contexts, aggregate roots, entities,
' value objects, repositories, domain services, and domain exceptions.

hide empty members
skinparam classAttributeIconSize 0
skinparam shadowing false
skinparam packageStyle rectangle

skinparam class {
  BackgroundColor<<Aggregate Root>> #FFF2CC
  BackgroundColor<<Entity>> #DAE8FC
  BackgroundColor<<Value Object>> #E1D5E7
  BackgroundColor<<Repository>> #D5E8D4
  BackgroundColor<<Domain Service>> #F8CECC
  BackgroundColor<<Domain Exception>> #FCE5CD
}

title DDD Domain Model - Auction Microservices Milestone 2

package "Auction Orchestration BC" <<Bounded Context>> {
  class Auction <<Aggregate Root>> {
    auctionId
    listingId
    sellerId
    startTime
    endTime
    startingPrice
    currentPrice
    status
    schedule()
    activate()
    close()
    deleteIfNoBids()
  }

  class Bid <<Entity>> {
    bidId
    bidderId
    bidAmount
    bidTime
  }

  class "Money" as AuctionMoney <<Value Object>> {
    amount
    currency
  }

  enum AuctionStatus <<Value Object>> {
    SCHEDULED
    ACTIVE
    CLOSED
    SOLD
  }

  interface AuctionRepository <<Repository>>
  interface BidRepository <<Repository>>
  class AuctionApplicationService <<Domain Service>>
  class AuctionHasBidsException <<Domain Exception>>
  class AuctionInvariantViolationException <<Domain Exception>>

  Auction *-- "0..*" Bid
  Auction *-- AuctionMoney : price
  Bid *-- AuctionMoney : amount
  Auction --> AuctionStatus
  AuctionApplicationService --> AuctionRepository
  AuctionApplicationService --> BidRepository
  AuctionApplicationService ..> AuctionHasBidsException
  AuctionApplicationService ..> AuctionInvariantViolationException

  note right of Auction
    Aggregate invariant:
    an auction can be scheduled only when
    the seller owns the listing, the listing
    is published, and the seller is verified.

    Bidding invariant:
    a verified bidder may bid only when the
    auction is ACTIVE and cannot be the seller.

    Closing invariant:
    a sold auction creates an invoice for
    the winning bid.
  end note
}

package "User Management BC" <<Bounded Context>> {
  class User <<Aggregate Root>> {
    userId
    username
    email
    registrationDate
    verified
    rating
  }

  class Address <<Value Object>> {
    street
    city
    zipCode
    country
  }

  class Email <<Value Object>> {
    value
  }

  interface UserRepository <<Repository>>
  class UserApplicationService <<Domain Service>>
  class DuplicateEmailException <<Domain Exception>>

  User *-- Address
  User *-- Email
  UserApplicationService --> UserRepository
  UserApplicationService ..> DuplicateEmailException
}

package "Listing Management BC" <<Bounded Context>> {
  class Listing <<Aggregate Root>> {
    listingId
    sellerId
    title
    description
    category
    condition
    published
    publish()
  }

  enum "Condition" as ListingCondition <<Value Object>> {
    NEW
    LIKE_NEW
    GOOD
    FAIR
    POOR
    EXTENSIVE_USE
  }

  interface ListingRepository <<Repository>>
  class ListingApplicationService <<Domain Service>>
  class ListingAlreadyPublishedException <<Domain Exception>>

  Listing --> ListingCondition
  ListingApplicationService --> ListingRepository
  ListingApplicationService ..> ListingAlreadyPublishedException
}

package "Payment Processing BC" <<Bounded Context>> {
  class Invoice <<Aggregate Root>> {
    invoiceId
    auctionId
    buyerId
    sellerId
    finalSaleAmount
    issueDate
    dueDate
    status
    method
    pay()
  }

  class "Money" as InvoiceMoney <<Value Object>> {
    amount
    currency
  }

  enum InvoiceStatus <<Value Object>> {
    PENDING
    PAID
    ERROR
    REFUNDED
  }

  enum PaymentMethod <<Value Object>> {
    CREDIT_CARD
    DEBIT_CARD
    PAYPAL
    APPLE_PAY
    GOOGLE_PAY
  }

  interface InvoiceRepository <<Repository>>
  class InvoiceApplicationService <<Domain Service>>
  class InvoiceAlreadyPaidException <<Domain Exception>>

  Invoice *-- InvoiceMoney : finalSaleAmount
  Invoice --> InvoiceStatus
  Invoice --> PaymentMethod
  InvoiceApplicationService --> InvoiceRepository
  InvoiceApplicationService ..> InvoiceAlreadyPaidException
}

note bottom
  All bounded contexts shown are in scope for Milestone 2.
  Each context owns its aggregate, repository, database,
  DTO-facing application service, and domain exception.
end note

@enduml
